<resources>
    <string name="done_label">Done</string>
    <string name="day_picker_description">Month grid of days</string>
    <string name="year_picker_description">Year list</string>
    <string name="select_day">Select month and day</string>
    <string name="select_year">Select year</string>
    <string name="item_is_selected">%1$s selected</string>
    <string name="sans_serif" translatable="false">sans-serif</string>
    <string name="day_of_week_label_typeface" translatable="false">sans-serif</string>
    <string name="time_placeholder" translatable="false">--</string>
    <string name="time_separator" translatable="false">:</string>
    <string name="hour_picker_description">Hours circular slider</string>
    <string name="minute_picker_description">Minutes circular slider</string>
    <string name="radial_numbers_typeface" translatable="false">sans-serif</string>
    <string name="select_hours">Select hours</string>
    <string name="select_minutes">Select minutes</string>
    <string name="profile">Edit Profile</string>
    <string name="admin_profile">Administrator Profile</string>
    <string name="auth_profile">Author Profile</string>
    <string name="instructor_profile">Instructor Profile</string>
    <string name="label_welcome">Welcome to CourseMaker!</string>
    <string name="enter_pswd_from_mail">Enter the password sent to you by email. Contact administrator if you have not received the password.</string>
    <string name="label_login">Select account and password</string>
    <string name="label_firstname">Enter first name</string>
    <string name="label_name">Enter name</string>
    <string name="label_number">Enter Rating Number</string>
    <string name="label_lastname">Enter surname</string>
    <string name="label_password">Enter your Password</string>
    <string name="label_email">Enter Email Address</string>
    <string name="label_signin">Sign In</string>
    <string name="label_signup">Create Training Company</string>
    <string name="label_company_name">Enter Company Name</string>
    <string name="label_company_instruction">Enter your name and company name to register for the CourseMaker service.</string>
    <string name="label_cellphone">Enter Cellphone Number</string>
    <string name="label_update">Update</string>
    <string name="label_update_trainee">Update Trainee</string>
    <string name="label_update_instr">Update Instructor</string>
    <string name="label_update_auth">Update Author</string>
    <string name="label_update_admin">Update Administrator</string>
    <string name="label_update_equipment">Update Equipment</string>
    <string name="label_update_inventory">Update Inventory Item</string>
    <string name="label_update_class">Update Class</string>
    <string name="label_deactivate_class">Deactivate Class</string>
    <string name="label_delete_admin">Delete Administrator</string>
    <string name="label_delete_trainee">Delete Trainee</string>
    <string name="label_delete_class">Delete Class</string>
    <string name="label_delete_author">Delete Author</string>
    <string name="label_delete_instr">Delete Instructor</string>
    <string name="label_delete_equipment">Delete Equipment</string>
    <string name="label_delete_inventory">Delete Inventory</string>
    <string name="label_delete">Delete</string>
    <string name="lookup">Lookup Data</string>
    <string name="send_admin_pswd">Send Administrator Password</string>
    <string name="send_message">Send Message</string>
    <string name="pswd_request_sent">Password Request Sent OK</string>
    <string name="send_author_pswd">Send Author Password</string>
    <string name="send_instructor_pswd">Send Instructor Password</string>
    <string name="send_trainee_pswd">Send Trainee Password</string>
    <string name="send_exec_pswd">Send Executive Password</string>
    <string name="instructor_classes">Instructor Classes</string>
    <string name="trainee_class">Trainee Class</string>
    <string name="label_equipment">Equipment</string>
    <string name="label_return_equipment">Return Equipment</string>
    <string name="label_list_equipment">List Equipment</string>
    <string name="label_trainees">Trainees</string>
    <string name="label_add_class">Add Class</string>
    <string name="label_enroll_trainees">Enroll Trainees</string>
    <string name="label_add_class_course">Add Course to Class</string>
    <string name="powered_by">Powered by The Innovation Hub and mLab</string>
    <string name="assigned_classes">Assigned Classes</string>
    <string name="courses_authored">Courses Authored</string>
    <string name="no_teams">No teams found, please create one!</string>
    <string name="date_started">Date Started</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="date_end_wrong">The ending date is before the staring date. Please adjust.</string>
    <string name="last_rating_date">Last Rating Date</string>
    <string name="no_completion_date">No completion date</string>
    <string name="send_email">Send Email</string>
    <string name="send_help_request">Send Help Request</string>
    <string name="no_activities">No activities have been assigned. Please contact the Administrator</string>
    <string name="course_event">Course Calendar Event</string>
    <string name="total_days">Total Days</string>
    <string name="all_day">All Day</string>
    <string name="calendar">Calendar</string>
    <string name="enter_event">Enter Event</string>
    <string name="calendar_events">Calendar Event List</string>
    <string name="class_calendar">Class Calendar</string>
    <string name="no_description">This item has no description at this time</string>
    <string name="category">Category</string>
    <string name="send_instructor_msg">Send message to Instructor(s)</string>
    <string name="create_new_team">Create New Team</string>
    <string name="join_team">Join Team</string>
    <string name="send_trainee_msg">Send message to Trainee(s)</string>
    <string name="class_courses">Class Courses</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="number_trainees">Total Trainees</string>
    <string name="number_admins">Total Administrators</string>
    <string name="number_xcourses">Total Courses</string>
    <string name="number_authors">Total Authors</string>
    <string name="number_instructors">Total Instructors</string>
    <string name="number_xclasses">Total Classes</string>
    <string name="number_categories">Total Categories</string>
    <string name="number_coursesx">Total Courses</string>
    <string name="number_courses">Total Courses</string>
    <string name="number_lessons">Total Lessons</string>
    <string name="number_activities">Total Activities</string>
    <string name="number_links">Total Resource Links</string>
    <string name="number_trainee_ratings">Total Trainee Ratings</string>
    <string name="number_acts">Total Activities</string>
    <string name="number_instr_ratings">Total Instructor Ratings</string>
    <string name="number_trainee_acts">Total Trainee Activities</string>
    <string name="number_objectives">Total Objectives</string>
    <string name="number_coursetrainee_activities">Total Trainee Activities</string>
    <string name="instructor_rating_label">Rating</string>
    <string name="add_class">Add Instructor Class</string>
    <string name="import_course">Import Training Units</string>
    <string name="add_new">Add New Item</string>
    <string name="assign_equipment">Assign Equipment</string>
    <string name="courses_saved_to_class">Courses assigned to Class</string>
    <string name="no_courses_selected">No Courses selected for assigning</string>
    <string name="add_courses_to_class">Add Selected Courses to Class</string>
    <string name="activity_list">Activity List</string>
    <string name="activity">Activity</string>
    <string name="profile_edit">Edit Profile</string>
    <string name="profile_picture_uploaded">Profile Picture Uploaded</string>
    <string name="error_profile_upload">Profile Picture failed to upload. Please try again</string>
    <string name="submit_profile">Submit Profile</string>
    <string name="take_pic">Take Picture</string>
    <string name="id_number">ID Number</string>
    <string name="male">Male</string>
    <string name="course_noact">Course selected has no Activities defined</string>
    <string name="error_image_save">Unable to save picture to disk. Please try again</string>
    <string name="error_image_get">Unable to get picture from disk. Please take another picture</string>
    <string name="female">Female</string>
    <string name="home_address">Home Address</string>
    <string name="objective_list">Objectives List</string>
    <string name="objectives">Course Objectives</string>
    <string name="select_something">Please select or enter something</string>
    <string name="cancel">Cancel</string>
    <string name="enter_company">Enter Training Organization Name</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="find_resource_links">Find Links</string>
    <string name="task_activities">Task Activities</string>
    <string name="add_category">Add Category</string>
    <string name="email">Email Address</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="total">Total</string>
    <string name="trainee_eval">Trainee Activity Evaluation</string>
    <string name="no_activity_completed">No activity completed</string>
    <string name="class_trainee_list_not_found">Class has no Trainees enrolled</string>
    <string name="help_requests_title">Trainee Help Requests</string>
    <string name="return_equipment">Return Issued Equipment</string>
    <string name="already_returned">Equipment already returned</string>
    <string name="back">Back</string>
    <string name="calendar_description">Calendar Description</string>
    <string name="calendar_exists">Calendar for the class already exists. You can add events to the calendar</string>
    <string name="add_calendar">Add Class Calendar</string>
    <string name="select_condition">Please select equipment condition</string>
    <string name="lost">Lost</string>
    <string name="broken">Broken</string>
    <string name="ok">OK</string>
    <string name="booked_out">Booked Out</string>
    <string name="inventory_list">Inventory Item List</string>
    <string name="add_inventory">Add Inventory Item</string>
    <string name="update_inventory">Update Inventory</string>
    <string name="delete_inventory">Delete Inventory</string>
    <string name="serial_number">Serial</string>
    <string name="make_model">Make and Model</string>
    <string name="year_acquired">Year Acquired</string>
    <string name="items">Items</string>
    <string name="record_closed">This record is closed</string>
    <string name="data_saved">Data has been saved</string>
    <string name="message_sent">Message has been sent</string>
    <string name="info">More Information</string>
    <string name="refresh">Refresh</string>
    <string name="help_types">Problem Types</string>
    <string name="rating_types">Rating Types</string>
    <string name="action_settings">Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="help_requests">Help Requests</string>
    <string name="menu_refresh">Refresh Data</string>
    <string name="course_list">Training Units</string>
    <string name="instructor_list">Instructor List</string>
    <string name="trainee">Trainee</string>
    <string name="instructor">Instructor</string>
    <string name="author">Author</string>
    <string name="administrator">Administrator</string>
    <string name="training_class">Class</string>
    <string name="update_profile">Update Profile Details</string>
</resources>