<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/new_thing"/>
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/refresh"/>
    <item
        android:id="@+id/menu_equipment"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/label_equipment"/>
    <item
        android:id="@+id/menu_trainees"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/trainee"/>
    <item
        android:id="@+id/menu_author"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/author"/>
    <item
        android:id="@+id/menu_instructors"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/instructor"/>
    <item
        android:id="@+id/menu_admin"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/administrator"/>
    <item
        android:id="@+id/menu_class"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/training_class"/>
    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/ic_action_edit"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/update_profile"/>
    <item
        android:id="@+id/menu_rating"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/rating_types"/>
    <item
        android:id="@+id/menu_helptype"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/help_types"/>

</menu>