<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_takepic_instructor"
        android:icon="@drawable/tick_32"
        android:showAsAction="ifRoom"
        android:title="@string/take_pic">
    </item>
    <item
        android:id="@+id/menu_update_instructor"
        android:showAsAction="ifRoom"
        android:title="@string/label_update_instr">
    </item>
    <item
        android:id="@+id/menu_delete_instructor"
        android:showAsAction="ifRoom"
        android:title="@string/label_delete_instr">
    </item>
    <item
        android:id="@+id/menu_instr_classes"
        android:showAsAction="ifRoom"
        android:title="@string/instructor_classes">
    </item>
    <item
        android:id="@+id/menu_send_instr_password"
        android:showAsAction="ifRoom"
        android:title="@string/send_instructor_pswd">
    </item>

</menu>