<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_profile"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/profile_edit"/>
    <item
        android:id="@+id/menu_instructor"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/instructor_list"/>
    <item
        android:id="@+id/menu_courses"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/course_list"/>
    <item
        android:id="@+id/menu_refresh"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/refresh"/>
    <item
        android:id="@+id/menu_exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_exit"/>

</menu>