<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_refresh"/>
    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/users32"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/profile"/>
    <item
        android:id="@+id/menu_help_requests"
        android:icon="@drawable/ic_action_help"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/help_requests"/>
    <item
        android:id="@+id/menu_info"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/info"/>
    <item
        android:id="@+id/menu_back"
        android:orderInCategory="100"
        android:icon="@drawable/back_vector32"
        android:showAsAction="never"
        android:title="@string/menu_exit"/>

</menu>