<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/REG_newCompanyLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
        style="@style/Title2TextStyleBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_company_instruction" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="30dp" />

    <EditText
        android:id="@+id/REG_firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_firstname"
        android:imeOptions="actionDone"
        android:inputType="textCapWords"
        android:padding="15dp" />

    <EditText
        android:id="@+id/REG_lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_lastname"
        android:imeOptions="actionDone"
        android:inputType="textCapWords"
        android:padding="15dp" />

    <EditText
        android:id="@+id/REG_cellphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/label_cellphone"
        android:imeOptions="actionDone"
        android:inputType="phone"
        android:padding="15dp" />

    <EditText
        android:id="@+id/REG_companyName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_company_name"
        android:imeOptions="actionDone"
        android:inputType="textCapWords"
        android:padding="15dp" />

    <Spinner
        android:id="@+id/REG_emailSpinnerCompany"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/REG_passwordCompany"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword" />

    <Spinner
        android:id="@+id/REG_spinnerProvince"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/REG_spinnerCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="30dp" />

    <Button
        android:id="@+id/REG_btnSignUp"
        style="@style/ButtonNavyBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/label_signup" />

</LinearLayout>