<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        tools:context=".RegistrationActivity" >

        <TextView
            style="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/label_welcome"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/REG_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/REG_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/label_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/REG_btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/label_signin" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_company_instruction"
            android:textSize="18sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

        <EditText
            android:id="@+id/REG_firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_firstname"
            android:imeOptions="actionDone"
            android:inputType="textCapWords"
            android:padding="15dp" />

        <EditText
            android:id="@+id/REG_lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_lastname"
            android:imeOptions="actionDone"
            android:inputType="textCapWords"
            android:padding="15dp" />

        <EditText
            android:id="@+id/REG_cellphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/label_cellphone"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:padding="15dp" />

        <EditText
            android:id="@+id/REG_companyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_company_name"
            android:imeOptions="actionDone"
            android:inputType="textCapWords"
            android:padding="15dp" />

        <Spinner
            android:id="@+id/REG_spinnerProvince"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/REG_spinnerCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/REG_btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/label_signup" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/action_settings"
                android:src="@drawable/mlab" />

            <View
                android:layout_width="20dp"
                android:layout_height="wrap_content" />

            <ProgressBar
                android:id="@+id/REG_progress"
                style="@android:style/Widget.ProgressBar.Small.Inverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>