<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/REG_loginLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="top|center"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        style="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/label_login"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/REG_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" />

    <EditText
        android:id="@+id/REG_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_password"
        android:inputType="textPassword" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="30dp" />

    <Button
        android:id="@+id/REG_btnSignIn"
        style="@style/ButtonNavyBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/label_signin" />

</LinearLayout>